--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="race.js" defer></script>
+    <script src="p5.min.js" defer></script>
     <title>Fast and Fantastic</title>
   </head>
   <body></body>
