--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="race.js" defer></script>
-    <script src="p5.min.js" defer></script>
+    <script src="race.js"></script>
+    <script src="p5.min.js"></script>
     <title>Fast and Fantastic</title>
   </head>
   <body></body>
