--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="race.js"></script>
-    <script src="p5.min.js"></script>
+    <script src="race.js" defer></script>
+    <script src="p5.min.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
     <title>Fast and Fantastic</title>
   </head>
   <body></body>
 </html>
- 
