--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="p5.min.js"></script>
     <script src="race.js" defer></script>
-    <script src="traffic.js" defer></script>
+    <script type="module" src="traffic.js" defer></script>
     <title>Fast and Fantastic</title>
   </head>
   <body></body>
