--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="p5.min.js"></script>
-    <script src="race.js" defer></script>
-    <script src="traffic.js" defer></script>
-    <script src="restart.js"> defer</script> 
+    <script type="module" src="race.js" defer></script>
+
     <title>Fast and Fantastic</title>
   </head>
   <body></body>
 </html>
-  
